--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,10 +4,46 @@
 
 </div>
   <table>
+     <div>
+      <tr class="buttons">
+        <td><form>
+        <input id = "column-1" type = "submit" value = "column-1">
+        <input type = "hidden" name = "column" value = "1">
+        <input type= "hidden" id="counter1" value = "0">
+        </form></td>
+        <td><form>
+        <input id = "column-2" type = "submit" value = "column-2">
+        <input type = "hidden" id = "counter2" value = "2">
+        </form></td>
+        <td><form>
+        <input id = "column-3" type = "submit" value = "column-3">
+        <input type = "hidden" id = "counter3" value = "3">
+        </form></td>
+        <td><form>
+        <input id = "column-4" type = "submit" value = "column-4">
+        <input type = "hidden" name = "counter4" value = "4">
+        </form></td>
+        <td><form>
+        <input id = "column-5" type = "submit" value = "column-5">
+        <input type = "hidden" name = "counter5" value = "5">
+        </form></td>
+        <td><form>
+        <input id = "column-6" type = "submit" value = "column-6">
+        <input type = "hidden" name = "counter6" value = "6">
+        </form></td>
+        <td><form>
+        <input id = "column-7" type = "submit" value = "column-7">
+        <input type = "hidden" name = "counter7" value = "7">
+        </form></td>
+      </tr>
+    </div>
+  </table>
+  <table>
+
     <div>
       <tr id="1" class="block">
-        <td id="red"></td>
-        <td id='black'></td>
+        <td></td>
+        <td></td>
         <td></td>
         <td></td>
         <td></td>
@@ -67,3 +103,12 @@
     </div>
   </table>
 </div>
+
+
+
+
+
+
+
+
+
