buttons stay in place

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,38 +6,38 @@
   <table>
      <div>
       <tr class="buttons">
-        <td><form>
-        <input id = "column-1" type = "submit" value = "column-1">
+        <td ><form>
+        <input id = "column-1" type = "submit" value = "Drop">
         <input type = "hidden" name = "column" value = "1">
         <input type= "hidden" id="row" value = "6">
         </form></td>
         <td><form>
-        <input id = "column-2" type = "submit" value = "column-2">
+        <input id = "column-2" type = "submit" value = "Drop">
         <input type = "hidden" name = "column" value = "2">
         <input type= "hidden" id="row" value = "6">
         </form></td>
         <td><form>
-        <input id = "column-3" type = "submit" value = "column-3">
+        <input id = "column-3" type = "submit" value = "Drop">
         <input type = "hidden" name = "column" value = "3">
         <input type= "hidden" id="row" value = "6">
         </form></td>
         <td><form>
-        <input id = "column-4" type = "submit" value = "column-4">
+        <input id = "column-4" type = "submit" value = "Drop">
         <input type = "hidden" name = "column" value = "4">
         <input type= "hidden" id="row" value = "6">
         </form></td>
         <td><form>
-        <input id = "column-5" type = "submit" value = "column-5">
+        <input id = "column-5" type = "submit" value = "Drop">
         <input type = "hidden" name = "column" value = "5">
         <input type= "hidden" id="row" value = "6">
         </form></td>
         <td><form>
-        <input id = "column-6" type = "submit" value = "column-6">
+        <input id = "column-6" type = "submit" value = "Drop">
         <input type = "hidden" name = "column" value = "6">
         <input type= "hidden" id="row" value = "6">
         </form></td>
         <td><form>
-        <input id = "column-7" type = "submit" value = "column-7">
+        <input id = "column-7" type = "submit" value = "Drop">
         <input type = "hidden" name = "column" value = "7">
         <input type= "hidden" id="row" value = "6">
         </form></td>
