add id to cells

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -51,63 +51,63 @@
 
     <div>
       <tr id="1" class="block">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td id="column_1"></td>
+        <td id="column_2"></td>
+        <td id="column_3"></td>
+        <td id="column_4"></td>
+        <td id="column_5"></td>
+        <td id="column_6"></td>
+        <td id="column_7"></td>
       </tr>
 
       <tr id="2" class="block">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td id="column_1"></td>
+        <td id="column_2"></td>
+        <td id="column_3"></td>
+        <td id="column_4"></td>
+        <td id="column_5"></td>
+        <td id="column_6"></td>
+        <td id="column_7"></td>
       </tr>
 
       <tr id="3" class="block">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+      <td id="column_1"></td>
+        <td id="column_2"></td>
+        <td id="column_3"></td>
+        <td id="column_4"></td>
+        <td id="column_5"></td>
+        <td id="column_6"></td>
+        <td id="column_7"></td>
       </tr>
 
       <tr id="4" class="block">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td id="column_1"></td>
+        <td id="column_2"></td>
+        <td id="column_3"></td>
+        <td id="column_4"></td>
+        <td id="column_5"></td>
+        <td id="column_6"></td>
+        <td id="column_7"></td>
       </tr>
 
       <tr id="5" class="block">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td id="column_1"></td>
+        <td id="column_2"></td>
+        <td id="column_3"></td>
+        <td id="column_4"></td>
+        <td id="column_5"></td>
+        <td id="column_6"></td>
+        <td id="column_7"></td>
       </tr>
 
       <tr id="6" class="block">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td id="column_1"></td>
+        <td id="column_2"></td>
+        <td id="column_3"></td>
+        <td id="column_4"></td>
+        <td id="column_5"></td>
+        <td id="column_6"></td>
+        <td id="column_7"></td>
       </tr>
     </div>
   </table>
