--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -110,6 +110,14 @@
         <td id="column_7"></td>
       </tr>
     </div>
+
+    <div class="left_block">
+    </div>
+
+    <div class="right_block">
+      <p></p>
+    </div>
+
   </table>
 </div>
 
