hardcoded one win condition

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -42,6 +42,7 @@
         <input type= "hidden" id="row" value = "6">
         </form></td>
         <form>
+          <input type = "hidden" id = "win_counter" value - "0">
           <input type = "hidden" id = "turn_counter" value = "0">
         </form>
       </tr>
