--- a/public/css/application.css
+++ b/public/css/application.css
@@ -42,20 +42,6 @@ table {
   border: solid black 2px;
   margin-left: auto;
   margin-right: auto;
-  background-color: yellow;
+  background-image: url('https://beryls.com/new/wp-content/uploads/2012/12/p-7916-81156.jpg');
 }
 
-/*#red {
-  background-image: url('http://i.imgur.com/QRznfHy.jpg');
-
-}
-
-#black {
-  background-color: black;
-}*/
-
-/*.right_block {
-  height: 100%;
-  width: 50px;
-  background-color: blue;
-}*/
